# dot

./: .cursorignore  .editorconfig  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .sops.yaml  :wq  LICENSE  Makefile  README.md  checks.nix  devShells.nix  flake.nix  makefile  nixpkgs-config.nix  packages.nix  result  shell.nix  statix.toml
.agents/: AGENTS.md
.agents/antigravity/: mcp_config.json
.cursor/: mcp.json
.cursor/rules/: ai-interaction.mdc  git-commits.mdc  host-configuration.mdc  nix-modules.mdc  project-structure.mdc
.github/workflows/: ci.yml  nixpkgs-fmt.yml
dotfiles/alacritty/: alacritty.yml
dotfiles/awesome/: keys.lua  mouse.lua  rc.lua  rules.lua  signals.lua  variables.lua  wibar.lua
dotfiles/kitty/: kitty.conf
dotfiles/picom/: picom.conf
dotfiles/zsh/: .p10k.zsh  common.zsh
home/: default.nix
home-manager/: home.nix
home/desktop/: default.nix
hosts/: default.nix
hosts/_common/: default.nix  nix.nix  xserver.nix
hosts/_users/: dgarifullin.nix
hosts/mac-blackstar/: default.nix
hosts/mac-brightstar/: default.nix
hosts/mac-italy/: default.nix
hosts/mac-japan/: default.nix
hosts/nix-germany/: configuration.nix  (+2 more)
lib/: default.nix  flakeHelpers.nix  moduleRegistry.nix
modules/: default.nix  laptop.nix  options.nix
nixos/: configuration.nix  hardware-configuration.nix
overlays/: additions.nix  default.nix  patches.nix
pkgs/: default.nix  picom.nix  result
profiles/: desktop.nix  developer.nix  gaming.nix  macos.nix  server.nix
templates/python/: .gitignore  flake.nix  pyproject.toml
(+408 files in other folders)
