[tool.poetry]
name = "nix-python"
version = "0.1.0"
description = ""
authors = ["Damir Garifullin <gosugdr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-restx = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
